--- a/files/quantum_state.tex
+++ b/files/quantum_state.tex
@@ -1,3 +1,3 @@
-\popis{číslo pí}
-
-Pí se rovná přesně třem. 
+\popis{Součet nekonečné geometrické řady}
+Nekonečná geometrická řada konverguje, právě když pro její kvocient platí $|q| < 1$. 
+V takovém případě je její součet $S$ dán vzorcem $S = \frac{a_1}{1 - q}$ kde $a_1$ je první člen řady.
