--- a/files/quantum_state.tex
+++ b/files/quantum_state.tex
@@ -1,3 +1,4 @@
 \popis{Součet nekonečné geometrické řady}
-Nekonečná geometrická řada konverguje, právě když pro její kvocient platí $|q| < 1$. 
-V takovém případě je její součet $S$ dán vzorcem $S = \frac{a_1}{1 - q}$ kde $a_1$ je první člen řady.
+Geometrická řada je nekonečný součet členů $a_1+a_1q+a_1q^2+\dots$. 
+Tato řada konverguje k součtu $S$ pouze pokud je splněna podmínka $|q|<1$. 
+Vzorec pro výpočet celkového součtu je $S=\frac{a_1}{1-q}$ kde $a_1$ značí první člen.
